# claude-code-camp-2026-Q2

./: .gitignore  README.md
.boukensha/: .env.example  settings.yaml
.boukensha/prompts/player/: system.md
docs/: explore_architectures.md
docs/journal/: 0_preweek.md  1_baseline.md  README.md
docs/plans/: map_visualizer.md
docs/plans/week1_baseline/: 00_config.md  01_struct_skeleton.md  02_the_registry.md  architecture.md
week0_explore/: CHALLENGES.md
week0_explore/docs/: manual_mud_exploration.md
week0_explore/explore_architecture/001_playing_agent/: CLAUDE.md
week0_explore/explore_architecture/01_plain_agent/: CLAUDE.md
week0_explore/explore_architecture/01_plain_agent/data/: player.md  world.md
week0_explore/explore_architecture/02_agent_skills/data/: .mud_memory.json  plan.json  player.md  world.md
week0_explore/visualizer/: .gitignore  README.md  index.html  package-lock.json  package.json  serve.py  vite.config.ts  world.py
week0_explore/visualizer/src/: App.tsx  demo.ts  index.css  overlays.tsx  state.ts
week1_baseline/: README.md
week1_baseline/agent/00_config/: README.md
week1_baseline/agent/01_struct_skeleton/: README.md  pyproject.toml
week1_baseline/agent/01_struct_skeleton/boukensha/: __init__.py  config.py  context.py  message.py  tool.py
week1_baseline/agent/01_struct_skeleton/boukensha/tasks/: base.py
week1_baseline/agent/01_struct_skeleton/boukensha/tasks/prompts/: system.md
week1_baseline/agent/01_struct_skeleton/examples/: example.py
week1_baseline/agent/02_the_registry/: README.md
(+22 files in other folders)
