[project]
name = "boukensha"
version = "0.1.0"
description = "A baseline MUD-playing agent, built step by step"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["boukensha"]
